crates/murphy-plugin-macros/tests/ui/fail_cop_unknown_kind.stderr
error: #[on_node]: unknown node kind "carrot". Valid kinds are: nil, true, false, self, int, float, str, sym, lvar, ivar, cvar, gvar, const, lvasgn, ivasgn, casgn, send, csend, block, block_pass, splat, array, hash, pair, if, case, when, begin, return, and, or, def, class, module, args, arg, gvasgn, cvasgn, optarg, restarg, kwarg, kwoptarg, kwrestarg, blockarg, kwsplat, while, until, range, sclass, break, next, yield, super, zsuper, defined, rescue, resbody, ensure, op_asgn, or_asgn, and_asgn, dstr, dsym, xstr, regexp, masgn, mlhs, for, lambda, defs, index, indexasgn, kwbegin, cbase, regopt, rational, complex, not, retry, redo, numblock, procarg0, forward_args, forwarded_args, case_match, in_pattern, array_pattern, hash_pattern, match_var, itblock, alias, undef, preexe, postexe, back_ref, nth_ref, shadowarg, kwnilarg, blocknilarg, find_pattern, match_alt, match_rest, match_nil_pattern, array_pattern_with_tail, match_pattern_p, match_pattern, match_as, const_pattern, pin, if_guard, unless_guard
  --> tests/ui/fail_cop_unknown_kind.rs:10:22
   |
10 |     #[on_node(kind = "carrot")]
   |                      ^^^^^^^^

warning: unused import: `murphy_ast::NodeId`
 --> tests/ui/fail_cop_unknown_kind.rs:1:5
  |
1 | use murphy_ast::NodeId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_unknown_kind.rs:2:5
  |
2 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^
